...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f2f2f2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonFragment1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorText"
            android:background="@android:color/transparent"
...
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:name="com.example.musicrenting.Insu1" />

    <Button
        android:id="@+id/borrowButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Borrow"
        android:textColor="@android:color/black"
        android:backgroundTint="#ffcb05"/>
...
