<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_main_upload"
    android:gravity="center"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@drawable/rounded_background">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Event Name"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:backgroundTint="@color/white"
        android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/etDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white"
            android:backgroundTint="@color/white"
            android:hint="Enter Description/Date"
            android:textColor="@android:color/white"
        android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/btnCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:backgroundTint="#c6b861"
            android:text="Create"
            android:layout_gravity="center"/>

    </LinearLayout>
</LinearLayout>
