<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#e2f4f9">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvEvent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnFeedback"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:contentDescription="Add Participant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/feedback_ic"
        android:backgroundTint="@color/white"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnAddEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Add Participant"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/add_ic"
            android:backgroundTint="@color/white" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
